add InsertionSort class for sorting visualization and update BubbleSort and SelectionSort for improved status messages