@@ -8,7 +8,7 @@ public class SelectionSort extends SwingWorker<Void, int[]> {
     private SortPanel sortPanel;
     private int comparisons = 0;
     private int interchanges = 0;
-    private String currentStatus = "Starting...";
+    private String currentStatus = "Starting Selection sort...";
     private int interchangedIdx1 = -1;
     private int interchangedIdx2 = -1;
     private int comparedIdx1 = -1;
@@ -27,12 +27,13 @@ public class SelectionSort extends SwingWorker<Void, int[]> {
         for (int i = 0; i < array.length - 1; i++) {
             int min = array[i];
             int idx = i;
-            for (int j = i + 1; j < array.length - 1; j++) {
+            for (int j = i + 1; j < array.length; j++) {
                 comparisons++;
                 comparedIdx1 = j;
                 comparedIdx2 = idx;
                 interchangedIdx1 = -1;
                 interchangedIdx2 = -1;
+                currentStatus = "Comparing " + array[j] + "the minimum value in the sub array" + min;
                 publish(array.clone());
                 Thread.sleep(speed);
                 if (array[j] < min) {
@@ -46,6 +47,7 @@ public class SelectionSort extends SwingWorker<Void, int[]> {
                 interchangedIdx2 = idx;
                 comparedIdx1 = -1;
                 comparedIdx2 = -1;
+                currentStatus = "Swapping " + array[i] + " with" + array[idx];
             }
             int temp = array[idx];
             array[idx] = array[i];
@@ -58,7 +60,7 @@ public class SelectionSort extends SwingWorker<Void, int[]> {
 
     @Override
     protected void process(List<int[]> chunks) {
-        int[] arr = chunks.get(chunks.size() - 1);
+        int[] arr = chunks.getLast();
         sortPanel.updateVisualization(arr, comparisons, interchanges, currentStatus, interchangedIdx1, interchangedIdx2, comparedIdx1, comparedIdx2);
     }
 
